--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="ok_text">Ok</string>
     <string name="cancel_text">Cancel</string>
     <string name="enter_amount">Enter Amount</string>
+    <string name="select_values">Selected</string>
 </resources>
