--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="popup_type">Types of Popup</string>
     <string name="custom_toast_type">Types of Toast</string>
 
+    <!--popup string-->
     <string name="simple_popup">Simple Default Popup</string>
     <string name="custom_popup">Custom Popup</string>
     <string name="common_popup">Common Popup</string>
@@ -14,8 +15,10 @@
 
     <string name="title_input_field">Input Fields</string>
     <string name="title_popup">Popup Types</string>
+    <string name="title_toast">Toast Types</string>
     <string name="title_menu">Menu Option</string>
 
+    <!--alert string-->
     <string name="alert_title">Alert Dialog</string>
     <string name="alert_list_title">Alert Dialog with List</string>
     <string name="alert_message">This is a Alert Message</string>
@@ -34,4 +37,10 @@
     <string name="national_holiday">National Holiday</string>
     <string name="kayin_new_year">Kayin New Year</string>
     <string name="christmas_day">Christmas Day</string>
+
+    <!--toast-->
+    <string name="simple_custom_toast">Simple Custom Toast</string>
+    <string name="custom_design_toast">Customized Toast</string>
+    <string name="time_toast">Custom Duration Toast</string>
+
 </resources>
